[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aq6380-pyvisa-tools"
version = "0.1.0"
description = "Python/PyVISA utilities for Yokogawa AQ6380 optical spectrum analyzers"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "aq6380-pyvisa-tools contributors" }
]
dependencies = [
    "numpy>=1.23",
    "pyvisa>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[tool.setuptools.packages.find]
where = ["src"]
